@@ -387,6 +387,9 @@ LIBXMP_EXPORT int         xmp_prev_position   (xmp_context);
 LIBXMP_EXPORT int         xmp_set_position    (xmp_context, int);
 LIBXMP_EXPORT int         xmp_set_row         (xmp_context, int);
 LIBXMP_EXPORT int         xmp_set_tempo_factor(xmp_context, double);
+LIBXMP_EXPORT int         xmp_set_tempo_factor_relative(xmp_context, double);
+LIBXMP_EXPORT double      xmp_get_tempo_factor(xmp_context);
+LIBXMP_EXPORT double      xmp_get_tempo_factor_relative(xmp_context);
 LIBXMP_EXPORT void        xmp_stop_module     (xmp_context);
 LIBXMP_EXPORT void        xmp_restart_module  (xmp_context);
 LIBXMP_EXPORT int         xmp_seek_time       (xmp_context, int);
